--- a/projects/rating-swiper/src/lib/component/profile-card/profile-card.component.html
+++ b/projects/rating-swiper/src/lib/component/profile-card/profile-card.component.html
@@ -53,10 +53,11 @@
     </div>
     <ng-container *ngIf="activePair as ap">
       <div class="active-pair-info">
-        <div class="pair-meta left">
+        <div class="pair-meta-left">
           <app-profile-info [card]="ap.left"></app-profile-info>
         </div>
-        <div class="pair-meta right">
+
+        <div class="pair-meta-right">
           <app-profile-info [card]="ap.right"></app-profile-info>
         </div>
       </div>
