--- a/projects/rating-swiper/src/lib/component/start-swiping/start-swiping.component.html
+++ b/projects/rating-swiper/src/lib/component/start-swiping/start-swiping.component.html
@@ -16,6 +16,9 @@
       <div class="swipe-icon">
         <img src="/assets/vertical-swipe.svg" alt="swipe hand" />
       </div>
+      <div class="swipe-icon">
+        <img src="/assets/expansion.svg" alt="expansion hand" />
+      </div>
     </div>
 
     <h2 class="title">Date Preferences:<br />swipe fake profiles</h2>
